--- a/hiringprocess.html
+++ b/hiringprocess.html
@@ -7,7 +7,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 
-<title>Omil Staffing - NGO Programmes</title>
+<title>Omil Staffing - Hiring Process</title>
 
 <!-- Fav Icon -->
 <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
@@ -81,16 +81,16 @@
                     <nav class="main-menu navbar-expand-md navbar-light">
                         <div class="collapse navbar-collapse show clearfix" id="navbarSupportedContent">
                             <ul class="navigation clearfix">
-                                <li class=""><a href="index.html">Home</a> </li> 
-                                <li><a href="about.html">About</a></li>
-                                <li><a href="service.html">Our Services</a></li>
+                                <li ><a href="index.html">Home</a> </li> 
+                                <li ><a href="about.html">About</a></li>
+                                <li class="current"><a href="service.html">Our Services</a></li>
                                 <li><a href="team.html">Our Team</a></li>
-                                <li class="dropdown"><a href="visaapplication.html">Visas</a>
+                                <li class="dropdown "><a href="visaapplication.html">Visas</a>
                                     <ul>
-                                        <li class="fw-bolder"><a href="visaapplication.html">Visa Applications</a> </li>
+                                        <li class="fw-bolder">Visa Applications</li>
                                     </ul>
                                 </li>
-                                <li class="dropdown"><a href="scholarship.html">Scholarships</a>
+                                <li class="dropdown " ><a href="scholarship.html">Scholarships</a>
                                     <ul>
                                         <li class="fw-bolder">Scholarship Applications</li>
                                     </ul>
@@ -119,12 +119,12 @@
                                         <li class="fw-bolder"><a href="https://drive.google.com/drive/folders/1XzvBlSwYWPmP3xTJmMALpuYEKflfDfQw?usp=sharing">Audio Books at Spice FM</a></li>
                                     </ul>
                                 </li>
-                                <li class="dropdown"><a href="placements.html">Placements</a>
+                                <li class="dropdown "><a href="placements.html">Placements</a>
                                     <ul>
                                         <li class="fw-bolder">C Suite Placements</li>
                                     </ul>
                                 </li>
-                                <li class="dropdown current"><a href="ngoProgrammes.html">NGO</a>
+                                <li class="dropdown"><a href="ngoProgrammes.html">NGO</a>
                                     <ul>
                                         <li class="fw-bolder">Scholarship Applications</li>
                                     </ul>
@@ -187,11 +187,11 @@
             <div class="auto-container">
                 <div class="content-box">
                     <div class="title">
-                        <h1>NGO Programmes</h1>
+                        <h1>Hiring Process</h1>
                     </div>
                     <ul class="bread-crumb clearfix">
                         <li><a href="index-2.html">Home</a></li>
-                        <li>Service Details</li>
+                        <li>Recruitement</li>
                     </ul>
                 </div>
             </div>
@@ -205,30 +205,42 @@
                 <div class="row clearfix">
                     <div class="col-lg-12 col-md-12 col-sm-12 content-side">
                         <div class="service-details-content">
-                            <div class="text">
-                                <h2>NGO Programmes</h2>
-                                <p>
-                                    In today's rapidly changing world, the role of NGOs in driving social change is more important than ever. With communities evolving and new challenges emerging, the demand for impactful programs is incessant. However, creating meaningful change goes beyond mere initiatives; it's about implementing programs that align with your organization's mission and values.
-                                </p>
-                                <!-- <p>It has survived not only five centuries. Lorem Ipsum is simply dummy text of the new design printng and type setting Ipsum take a look at our round. When an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting.</p> -->
-                                <h4>
-                                    Empowering communities with the right programs, at the right time, every time.
-                                </h4>
+                            <div class="text"> 
+                                <h2>CV Revamping</h2>
+                                <p>"Enhance your hiring process with our comprehensive support, designed to help you find the ideal candidates swiftly and efficiently. Our expertise ensures a seamless and effective hiring experience, tailored to meet your specific needs."</p>
+                                <h4>Getting Started</h4>
                             </div>
                             <div class="content_block_1">
                                 <div class="content-box">
-                                    <div class="inner-box clearfix">
-                                        <div class="single-item">
-                                            <h5><span>01</span>Collaborative Partnerships</h5>
-                                            <p>
-                                                Forge collaborative partnerships that amplify your program's impact and drive mutual growth.
-                                            </p>
+                                    <div class="inner-box clearfix d-block">
+                                        <div class="single-item d-block">
+                                            <h5><span>01</span>Package Selection</h5>
+                                            <p>To order a CV revamp, first, select a service package that matches your career level—entry-level, professional, or executive. Choose the package that suits your needs.</p>
                                         </div>
                                         <div class="single-item">
-                                            <h5><span>02</span>Innovative Solutions</h5>
-                                            <p>
-                                                Discover innovative program solutions tailored to address the unique challenges of your community.
-                                            </p>
+                                            <h5><span>02</span>Current CV Submission</h5>
+                                            <p>Upload your CV and provide details about your job goals, work history, achievements, and specific preferences. This helps the CV writer understand your background and aspirations.</p>
+                                        </div>
+                                        
+                                    </div>
+                                </div>
+                                <div class="content-box">
+                                    <div class="inner-box clearfix">
+                                        <div class="single-item">
+                                            <h5><span>03</span>Consultation</h5>
+                                            <p>Most services offer a consultation with a professional CV writer, typically via phone or online chat. During this consultation, you’ll discuss your career goals, work experience, and any special requests. This step ensures the writer fully grasps your professional journey and objectives.</p>
+                                        </div>
+                                        <div class="single-item">
+                                            <h5><span>04</span>New CV Crafting</h5>
+                                            <p>When the first draft is ready, you’ll have the opportunity to review it and provide feedback. Most services include at least one round of revisions. Carefully review the draft and communicate any changes or additions you’d like.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="content-box">
+                                    <div class="inner-box clearfix">
+                                        <div class="single-item">
+                                            <h5><span>05</span>Final</h5>
+                                            <p>Once revisions are made, you’ll receive the final version of your CV in multiple formats, such as Word and PDF. With your revamped CV, you’ll be better positioned to make a strong impression on potential employers and advance your career.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -237,80 +249,82 @@
                                 <div class="row clearfix">
                                     <div class="col-lg-6 col-md-6 col-sm-12 text-column">
                                         <div class="text">
-                                            <h3>Why Choose Us?</h3>
-                                            <p>Discover why our NGO programs stand out:</p>
+                                            <h3>Why You Should Hire From Us</h3>
+                                            <p>Discover why our recruitment services stand out:</p>
                                             <ul class="list-item clearfix">
-                                                <li>Personalized program solutions that meet your unique needs.</li>
-                                                <li>Expertise in navigating the complexities of program implementation, ensuring seamless processes.</li>
-                                                <li>Efficient and effective strategies, saving you time and resources.</li>
-                                                <li>Commitment to delivering exceptional service and results, every time.</li>
+                                                <li>Our rigorous selection process ensures we attract and retain top-tier, skilled candidates</li>
+                                                <li>We foster innovation and creativity through our commitment to diversity and inclusion.</li>
+                                                <li>Our supportive environment emphasizes teamwork, growth, and work-life balance.</li>
+                                                <li>We keep our team at the industry's forefront with ongoing training and mentorship.</li>
+                                                <li>We offer stability, competitive salaries, and career advancement opportunities.</li>
                                             </ul>                                            
                                         </div>
                                     </div>
                                     <div class="col-lg-6 col-md-6 col-sm-12 image-column">
-                                        <figure class="image">
-                                            <img src="assets/images/banner/omilFoundation.jpg" alt="NGO Programmes">
-                                        </figure>
+                                        <figure class="image"><img src="assets/images/banner/hiring.jpg" alt="Scholarship Opportunities"></figure>
                                     </div>
                                 </div>
                             </div>
                             <div class="accordian-inner">
+                                <h3 class="my-2">Our Hiring Process in 5 Steps</h3>
                                 <ul class="accordion-box">
                                     <li class="accordion block">
                                         <div class="acc-btn">
                                             <div class="icon-outer"><i class="fas fa-plus"></i></div>
-                                            <h5>What types of programs do NGOs offer?</h5>
+                                            <h5>Application Submission:</h5>
                                         </div>
                                         <div class="acc-content">
                                             <div class="text">
-                                                <p>
-                                                    Explore the diverse types of programs NGOs offer and their significance in driving social change.
-                                                </p>
+                                                <p>Candidates submit their resumes and cover letters through our online portal. We encourage applicants to highlight their relevant experience and skills to match the job requirements.</p>
                                             </div>
                                         </div>
                                     </li>
                                     <li class="accordion block active-block">
                                         <div class="acc-btn active">
                                             <div class="icon-outer"><i class="fas fa-plus"></i></div>
-                                            <h5>How to get involved with an NGO?</h5>
+                                            <h5>Initial Screening:</h5>
                                         </div>
                                         <div class="acc-content current">
                                             <div class="text">
-                                                <p>
-                                                    Discover the steps to get involved with an NGO and maximize your contribution to social initiatives.
-                                                </p>
+                                                <p>Our HR team conducts an initial screening to assess the qualifications and suitability of candidates. This includes reviewing resumes, cover letters, and any other submitted documents.</p>
+                                            </div>
+                                        </div>
+                                    </li>
+                                    <li class="accordion block">
+                                         <div class="acc-btn">
+                                            <div class="icon-outer"><i class="fas fa-plus"></i></div>
+                                            <h5>Interview Process:</h5>
+                                        </div>
+                                        <div class="acc-content">
+                                            <div class="text">
+                                                <p>Shortlisted candidates are invited for interviews, which may include a combination of phone, video, and in-person meetings. We focus on evaluating both technical skills and cultural fit within our organization.</p>
+                                            </div>
+                                        </div>
+                                    </li>
+                                    <li class="accordion block">
+                                         <div class="acc-btn">
+                                            <div class="icon-outer"><i class="fas fa-plus"></i></div>
+                                            <h5>Assessment and Testing:</h5>
+                                        </div>
+                                        <div class="acc-content">
+                                            <div class="text">
+                                                <p>Depending on the role, candidates may be required to complete assessments or tests. These can include technical tests, personality assessments, or job-specific tasks to demonstrate their capabilities.</p>
                                             </div>
                                         </div>
                                     </li>
                                     <li class="accordion block">
                                         <div class="acc-btn">
-                                            <div class="icon-outer"><i class="fas fa-plus"></i></div>
-                                            <h5>Check benefits of our NGO programs?</h5>
-                                        </div>
-                                        <div class="acc-content">
-                                            <div class="text">
-                                                <p>
-                                                    Explore the advantages and perks of participating in our NGO programs to create a lasting impact.
-                                                </p>
-                                            </div>
-                                        </div>
-                                    </li>
-                                    <li class="accordion block">
-                                        <div class="acc-btn">
-                                            <div class="icon-outer"><i class="fas fa-plus"></i></div>
-                                            <h5>How to contact our program coordinators?</h5>
-                                        </div>
-                                        <div class="acc-content">
-                                            <div class="text">
-                                                <p>
-                                                    Learn the various channels available to connect with our knowledgeable program coordinators for assistance.
-                                                </p>
-                                            </div>
-                                        </div>
-                                    </li>
+                                           <div class="icon-outer"><i class="fas fa-plus"></i></div>
+                                           <h5>Final Interview and Offer:</h5>
+                                       </div>
+                                       <div class="acc-content">
+                                           <div class="text">
+                                               <p>Top candidates are invited for a final interview with senior management or team leaders. Successful candidates will receive a job offer, detailing the terms of employment, benefits, and next steps.</p>
+                                           </div>
+                                       </div>
+                                   </li>
                                 </ul>                                
-                            </div>
-                                                        
+                            </div>                            
                         </div>
                     </div>
                 </div>
