--- a/placements.html
+++ b/placements.html
@@ -7,7 +7,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 
-<title>Omil Staffing - NGO Programmes</title>
+<title>Omil Staffing - Placements</title>
 
 <!-- Fav Icon -->
 <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
@@ -81,16 +81,16 @@
                     <nav class="main-menu navbar-expand-md navbar-light">
                         <div class="collapse navbar-collapse show clearfix" id="navbarSupportedContent">
                             <ul class="navigation clearfix">
-                                <li class=""><a href="index.html">Home</a> </li> 
-                                <li><a href="about.html">About</a></li>
-                                <li><a href="service.html">Our Services</a></li>
+                                <li ><a href="index.html">Home</a> </li> 
+                                <li ><a href="about.html">About</a></li>
+                                <li ><a href="service.html">Our Services</a></li>
                                 <li><a href="team.html">Our Team</a></li>
-                                <li class="dropdown"><a href="visaapplication.html">Visas</a>
+                                <li class="dropdown "><a href="visaapplication.html">Visas</a>
                                     <ul>
-                                        <li class="fw-bolder"><a href="visaapplication.html">Visa Applications</a> </li>
+                                        <li class="fw-bolder">Visa Applications</li>
                                     </ul>
                                 </li>
-                                <li class="dropdown"><a href="scholarship.html">Scholarships</a>
+                                <li class="dropdown " ><a href="scholarship.html">Scholarships</a>
                                     <ul>
                                         <li class="fw-bolder">Scholarship Applications</li>
                                     </ul>
@@ -119,12 +119,12 @@
                                         <li class="fw-bolder"><a href="https://drive.google.com/drive/folders/1XzvBlSwYWPmP3xTJmMALpuYEKflfDfQw?usp=sharing">Audio Books at Spice FM</a></li>
                                     </ul>
                                 </li>
-                                <li class="dropdown"><a href="placements.html">Placements</a>
+                                <li class="dropdown current"><a href="placements.html">Placements</a>
                                     <ul>
                                         <li class="fw-bolder">C Suite Placements</li>
                                     </ul>
                                 </li>
-                                <li class="dropdown current"><a href="ngoProgrammes.html">NGO</a>
+                                <li class="dropdown"><a href="ngoProgrammes.html">NGO</a>
                                     <ul>
                                         <li class="fw-bolder">Scholarship Applications</li>
                                     </ul>
@@ -187,7 +187,7 @@
             <div class="auto-container">
                 <div class="content-box">
                     <div class="title">
-                        <h1>NGO Programmes</h1>
+                        <h1>C Suite Placements</h1>
                     </div>
                     <ul class="bread-crumb clearfix">
                         <li><a href="index-2.html">Home</a></li>
@@ -206,111 +206,44 @@
                     <div class="col-lg-12 col-md-12 col-sm-12 content-side">
                         <div class="service-details-content">
                             <div class="text">
-                                <h2>NGO Programmes</h2>
-                                <p>
-                                    In today's rapidly changing world, the role of NGOs in driving social change is more important than ever. With communities evolving and new challenges emerging, the demand for impactful programs is incessant. However, creating meaningful change goes beyond mere initiatives; it's about implementing programs that align with your organization's mission and values.
-                                </p>
-                                <!-- <p>It has survived not only five centuries. Lorem Ipsum is simply dummy text of the new design printng and type setting Ipsum take a look at our round. When an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting.</p> -->
-                                <h4>
-                                    Empowering communities with the right programs, at the right time, every time.
-                                </h4>
+                                <h2>Job Placement for Senior Executives: What to Expect</h2>
+                                <p>Senior executives with salaries starting at Ksh. 250,000 can expect a comprehensive and strategic job search process. </p>
+                                <h4>Key aspects include:</h4>
                             </div>
                             <div class="content_block_1">
                                 <div class="content-box">
                                     <div class="inner-box clearfix">
                                         <div class="single-item">
-                                            <h5><span>01</span>Collaborative Partnerships</h5>
-                                            <p>
-                                                Forge collaborative partnerships that amplify your program's impact and drive mutual growth.
-                                            </p>
+                                            <h5><span>01</span>Targeted Search: </h5>
+                                            <p>Placement services focus on matching executives with roles that align with their skills and career goals.</p>
                                         </div>
                                         <div class="single-item">
-                                            <h5><span>02</span>Innovative Solutions</h5>
-                                            <p>
-                                                Discover innovative program solutions tailored to address the unique challenges of your community.
-                                            </p>
+                                            <h5><span>02</span>Competitive Market Analysis</h5>
+                                            <p>Understanding industry standards and salary benchmarks.</p>
                                         </div>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="two-column">
-                                <div class="row clearfix">
-                                    <div class="col-lg-6 col-md-6 col-sm-12 text-column">
-                                        <div class="text">
-                                            <h3>Why Choose Us?</h3>
-                                            <p>Discover why our NGO programs stand out:</p>
-                                            <ul class="list-item clearfix">
-                                                <li>Personalized program solutions that meet your unique needs.</li>
-                                                <li>Expertise in navigating the complexities of program implementation, ensuring seamless processes.</li>
-                                                <li>Efficient and effective strategies, saving you time and resources.</li>
-                                                <li>Commitment to delivering exceptional service and results, every time.</li>
-                                            </ul>                                            
+                                <div class="content-box">
+                                    <div class="inner-box clearfix">
+                                        <div class="single-item">
+                                            <h5><span>03</span>Skill Enhancement</h5>
+                                            <p>Opportunities for additional training or certifications to increase marketability.</p>
                                         </div>
-                                    </div>
-                                    <div class="col-lg-6 col-md-6 col-sm-12 image-column">
-                                        <figure class="image">
-                                            <img src="assets/images/banner/omilFoundation.jpg" alt="NGO Programmes">
-                                        </figure>
+                                        <div class="single-item">
+                                            <h5><span>04</span>Networking Opportunities</h5>
+                                            <p>Access to exclusive networks and professional connections.</p>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="accordian-inner">
-                                <ul class="accordion-box">
-                                    <li class="accordion block">
-                                        <div class="acc-btn">
-                                            <div class="icon-outer"><i class="fas fa-plus"></i></div>
-                                            <h5>What types of programs do NGOs offer?</h5>
+                                <div class="content-box">
+                                    <div class="inner-box clearfix">
+                                        <div class="single-item">
+                                            <h5><span>05</span>Interview Preparation</h5>
+                                            <p>Tailored coaching for high-level interviews.</p>
                                         </div>
-                                        <div class="acc-content">
-                                            <div class="text">
-                                                <p>
-                                                    Explore the diverse types of programs NGOs offer and their significance in driving social change.
-                                                </p>
-                                            </div>
-                                        </div>
-                                    </li>
-                                    <li class="accordion block active-block">
-                                        <div class="acc-btn active">
-                                            <div class="icon-outer"><i class="fas fa-plus"></i></div>
-                                            <h5>How to get involved with an NGO?</h5>
-                                        </div>
-                                        <div class="acc-content current">
-                                            <div class="text">
-                                                <p>
-                                                    Discover the steps to get involved with an NGO and maximize your contribution to social initiatives.
-                                                </p>
-                                            </div>
-                                        </div>
-                                    </li>
-                                    <li class="accordion block">
-                                        <div class="acc-btn">
-                                            <div class="icon-outer"><i class="fas fa-plus"></i></div>
-                                            <h5>Check benefits of our NGO programs?</h5>
-                                        </div>
-                                        <div class="acc-content">
-                                            <div class="text">
-                                                <p>
-                                                    Explore the advantages and perks of participating in our NGO programs to create a lasting impact.
-                                                </p>
-                                            </div>
-                                        </div>
-                                    </li>
-                                    <li class="accordion block">
-                                        <div class="acc-btn">
-                                            <div class="icon-outer"><i class="fas fa-plus"></i></div>
-                                            <h5>How to contact our program coordinators?</h5>
-                                        </div>
-                                        <div class="acc-content">
-                                            <div class="text">
-                                                <p>
-                                                    Learn the various channels available to connect with our knowledgeable program coordinators for assistance.
-                                                </p>
-                                            </div>
-                                        </div>
-                                    </li>
-                                </ul>                                
-                            </div>
-                                                        
+                                    </div>
+                                </div>
+                            </div>                          
                         </div>
                     </div>
                 </div>
@@ -318,6 +251,17 @@
         </section>
         <!-- service-details end -->
 
+        <div class="quote-box mb-4">
+            <div class="auto-container">
+                <div class="inner-box">
+                    <div class="icon-box">"</div>
+                    <p><b>99 PERCENT SUCCESS RATE. YOU MUST PASS YOUR INTERVIEW. </b><br>
+                        <b>CALL FOR PRICES ON CV REGISTRATION.	</b><br>
+                        Overall, expect a thorough and personalized approach to securing top executive positions.
+                        </p>
+                </div>
+            </div>
+        </div>
 
         <!-- main-footer -->
         <footer class="main-footer">
