--- a/visaapplication.html
+++ b/visaapplication.html
@@ -7,7 +7,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 
-<title>Omil Staffing - NGO Programmes</title>
+<title>Omil Staffing - Visas</title>
 
 <!-- Fav Icon -->
 <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
@@ -81,16 +81,16 @@
                     <nav class="main-menu navbar-expand-md navbar-light">
                         <div class="collapse navbar-collapse show clearfix" id="navbarSupportedContent">
                             <ul class="navigation clearfix">
-                                <li class=""><a href="index.html">Home</a> </li> 
-                                <li><a href="about.html">About</a></li>
-                                <li><a href="service.html">Our Services</a></li>
+                                <li ><a href="index.html">Home</a> </li> 
+                                <li ><a href="about.html">About</a></li>
+                                <li ><a href="service.html">Our Services</a></li>
                                 <li><a href="team.html">Our Team</a></li>
-                                <li class="dropdown"><a href="visaapplication.html">Visas</a>
+                                <li class="dropdown current"><a href="visaapplication.html">Visas</a>
                                     <ul>
-                                        <li class="fw-bolder"><a href="visaapplication.html">Visa Applications</a> </li>
+                                        <li class="fw-bolder">Visa Applications</li>
                                     </ul>
                                 </li>
-                                <li class="dropdown"><a href="scholarship.html">Scholarships</a>
+                                <li class="dropdown " ><a href="scholarship.html">Scholarships</a>
                                     <ul>
                                         <li class="fw-bolder">Scholarship Applications</li>
                                     </ul>
@@ -124,7 +124,7 @@
                                         <li class="fw-bolder">C Suite Placements</li>
                                     </ul>
                                 </li>
-                                <li class="dropdown current"><a href="ngoProgrammes.html">NGO</a>
+                                <li class="dropdown"><a href="ngoProgrammes.html">NGO</a>
                                     <ul>
                                         <li class="fw-bolder">Scholarship Applications</li>
                                     </ul>
@@ -187,10 +187,10 @@
             <div class="auto-container">
                 <div class="content-box">
                     <div class="title">
-                        <h1>NGO Programmes</h1>
+                        <h1>Visas</h1>
                     </div>
                     <ul class="bread-crumb clearfix">
-                        <li><a href="index-2.html">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li>Service Details</li>
                     </ul>
                 </div>
@@ -200,35 +200,49 @@
 
 
         <!-- service-details -->
-        <section class="service-details">
+        <section class="service-details" style="margin-top: -5%;">
             <div class="auto-container">
                 <div class="row clearfix">
                     <div class="col-lg-12 col-md-12 col-sm-12 content-side">
                         <div class="service-details-content">
                             <div class="text">
-                                <h2>NGO Programmes</h2>
-                                <p>
-                                    In today's rapidly changing world, the role of NGOs in driving social change is more important than ever. With communities evolving and new challenges emerging, the demand for impactful programs is incessant. However, creating meaningful change goes beyond mere initiatives; it's about implementing programs that align with your organization's mission and values.
-                                </p>
-                                <!-- <p>It has survived not only five centuries. Lorem Ipsum is simply dummy text of the new design printng and type setting Ipsum take a look at our round. When an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting.</p> -->
-                                <h4>
-                                    Empowering communities with the right programs, at the right time, every time.
-                                </h4>
+                                <h2>Visa Applications</h2>
+                                <p>Navigating the visa application process can be a daunting task, especially for students aspiring to study in the United States. Our service offers comprehensive guidance aimed at simplifying this complex procedure, ensuring a smoother academic journey for all applicants. Designed to demystify the intricacies of visa applications, we provide students with the essential tools and knowledge needed to successfully navigate their path to studying in the U.S. <br>
+
+                                    Understanding the importance of selecting the correct visa type is the first step in this journey. We assist students in identifying the appropriate visa based on their academic plans, whether it be the F-1 visa for academic students, the J-1 visa for exchange visitors, or the M-1 visa for vocational students. This initial guidance ensures that students are well-informed about the requirements and expectations associated with their chosen visa type.
+                                    </p>
+                                <h4>Visa Services</h4>
                             </div>
                             <div class="content_block_1">
                                 <div class="content-box">
                                     <div class="inner-box clearfix">
                                         <div class="single-item">
-                                            <h5><span>01</span>Collaborative Partnerships</h5>
-                                            <p>
-                                                Forge collaborative partnerships that amplify your program's impact and drive mutual growth.
-                                            </p>
+                                            <h5><span>01</span>Visa Type Selection</h5>
+                                            <p>We assist students in identifying the correct visa type based on their academic plans, ensuring they are well-informed about the requirements.</p>
                                         </div>
                                         <div class="single-item">
-                                            <h5><span>02</span>Innovative Solutions</h5>
-                                            <p>
-                                                Discover innovative program solutions tailored to address the unique challenges of your community.
-                                            </p>
+                                            <h5><span>02</span>Document Preparation</h5>
+                                            <p>Our detailed checklist and guidance help students gather all necessary documents, reducing the likelihood of delays or complications in their application process.</p>
+                                        </div>
+                                    </div>
+                                    <div class="inner-box clearfix">
+                                        <div class="single-item">
+                                            <h5><span>03</span>Application Assistance</h5>
+                                            <p>Our experts guide students through each section of the visa application form, ensuring all information is accurate and consistent with supporting documents.</p>
+                                        </div>
+                                        <div class="single-item">
+                                            <h5><span>04</span>Interview Preparation</h5>
+                                            <p>We provide coaching sessions to help students prepare for their visa interviews, building confidence and increasing the chances of a successful outcome.</p>
+                                        </div>
+                                    </div>
+                                    <div class="inner-box clearfix">
+                                        <div class="single-item">
+                                            <h5><span>05</span>Post-Approval Support</h5>
+                                            <p>We offer ongoing support to help students understand their visa details and maintain their visa status while in the U.S.</p>
+                                        </div>
+                                        <div class="single-item">
+                                            <h5><span>06</span>Transition Assistance</h5>
+                                            <p>Our resources help students prepare for their new academic life in the U.S., including finding accommodation, understanding the education system, and adjusting to cultural differences.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -238,79 +252,27 @@
                                     <div class="col-lg-6 col-md-6 col-sm-12 text-column">
                                         <div class="text">
                                             <h3>Why Choose Us?</h3>
-                                            <p>Discover why our NGO programs stand out:</p>
+                                            <p>Discover why our Visa Application Assistance Services stand out:</p>
                                             <ul class="list-item clearfix">
-                                                <li>Personalized program solutions that meet your unique needs.</li>
-                                                <li>Expertise in navigating the complexities of program implementation, ensuring seamless processes.</li>
-                                                <li>Efficient and effective strategies, saving you time and resources.</li>
-                                                <li>Commitment to delivering exceptional service and results, every time.</li>
+                                                <li><b>Comprehensive Guidance:</b>
+                                                    Our holistic approach simplifies the complex visa application process, ensuring students are well-equipped at every step.</li>
+                                                <li><b>Expert Knowledge:</b>
+                                                    Our team of experts provides accurate and up-to-date information, minimizing the risk of application errors and rejections.</li>
+                                                <li><b>Personalized Support:</b>
+                                                    We offer tailored assistance based on each student's unique academic plans and needs, ensuring a customized and effective service.</li>
+                                                <li><b>Confidence Building:</b>
+                                                    Our interview coaching and meticulous application review process help build students' confidence and preparedness.</li>
+
+                                                <li><b>Ongoing Assistance:</b>
+                                                    We provide continuous support even after visa approval, helping students transition smoothly to their new academic life in the U.S.</li>
                                             </ul>                                            
                                         </div>
                                     </div>
                                     <div class="col-lg-6 col-md-6 col-sm-12 image-column">
-                                        <figure class="image">
-                                            <img src="assets/images/banner/omilFoundation.jpg" alt="NGO Programmes">
-                                        </figure>
+                                        <figure class="image"><img src="assets/images/banner/visa.jpg" alt="Scholarship Opportunities"></figure>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="accordian-inner">
-                                <ul class="accordion-box">
-                                    <li class="accordion block">
-                                        <div class="acc-btn">
-                                            <div class="icon-outer"><i class="fas fa-plus"></i></div>
-                                            <h5>What types of programs do NGOs offer?</h5>
-                                        </div>
-                                        <div class="acc-content">
-                                            <div class="text">
-                                                <p>
-                                                    Explore the diverse types of programs NGOs offer and their significance in driving social change.
-                                                </p>
-                                            </div>
-                                        </div>
-                                    </li>
-                                    <li class="accordion block active-block">
-                                        <div class="acc-btn active">
-                                            <div class="icon-outer"><i class="fas fa-plus"></i></div>
-                                            <h5>How to get involved with an NGO?</h5>
-                                        </div>
-                                        <div class="acc-content current">
-                                            <div class="text">
-                                                <p>
-                                                    Discover the steps to get involved with an NGO and maximize your contribution to social initiatives.
-                                                </p>
-                                            </div>
-                                        </div>
-                                    </li>
-                                    <li class="accordion block">
-                                        <div class="acc-btn">
-                                            <div class="icon-outer"><i class="fas fa-plus"></i></div>
-                                            <h5>Check benefits of our NGO programs?</h5>
-                                        </div>
-                                        <div class="acc-content">
-                                            <div class="text">
-                                                <p>
-                                                    Explore the advantages and perks of participating in our NGO programs to create a lasting impact.
-                                                </p>
-                                            </div>
-                                        </div>
-                                    </li>
-                                    <li class="accordion block">
-                                        <div class="acc-btn">
-                                            <div class="icon-outer"><i class="fas fa-plus"></i></div>
-                                            <h5>How to contact our program coordinators?</h5>
-                                        </div>
-                                        <div class="acc-content">
-                                            <div class="text">
-                                                <p>
-                                                    Learn the various channels available to connect with our knowledgeable program coordinators for assistance.
-                                                </p>
-                                            </div>
-                                        </div>
-                                    </li>
-                                </ul>                                
-                            </div>
-                                                        
+                            </div>                          
                         </div>
                     </div>
                 </div>
@@ -427,7 +389,7 @@
                 </div>
             </div>
         </footer>
-        <!-- main-footer end -->
+    <!-- main-footer end -->
 
 
 
